force-app/main/default/objects/Inspection__c/Inspection__c.object-meta.xml
<CustomObject>
    <description>Used to hold records of Inspection performed</description>
    <label>Inspection</label>
    <nameField>
        <displayFormat>IN-{0000000}</displayFormat>
        <label>Inspection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>