force-app/main/default/objects/Inspection__c/fields/Answered_Questions__c.field-meta.xml
<CustomField>
    <fullName>Answered_Questions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Answered Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>