force-app/main/default/objects/Inspection__c/fields/Audit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Audit_Reason__c</fullName>
    <label>Audit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhoc</fullName>
            </value>
            <value>
                <fullName>Occurrence</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Remediation of Previous Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>