force-app/main/default/objects/Inspection__c/fields/Available_Score__c.field-meta.xml
<CustomField>
    <fullName>Available_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Available Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>