force-app/main/default/objects/Inspection__c/fields/Email_Notification_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Notification Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>