force-app/main/default/objects/Inspection__c/fields/Email_Notification_Required__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if email notification is required based on the criteria defined</description>
    <inlineHelpText>Indicate if email notification is required based on the criteria defined</inlineHelpText>
    <label>Email Notification Required</label>
    <type>Checkbox</type>
</CustomField>