force-app/main/default/objects/Inspection__c/fields/Follow_up_Inspection_Control_Question__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Inspection_Control_Question__c</fullName>
    <label>Follow-up Inspection Control Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>