force-app/main/default/objects/Inspection__c/fields/Follow_up_Inspection_Controller__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Inspection_Controller__c</fullName>
    <label>Follow-up Inspection Controller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send it no matter how</fullName>
            </value>
            <value>
                <fullName>Overall score</fullName>
            </value>
            <value>
                <fullName>Answer from a question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>