force-app/main/default/objects/Inspection__c/fields/Follow_up_Inspection_ID__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Inspection_ID__c</fullName>
    <description>ID of the inspection record id as a followup inspection</description>
    <inlineHelpText>ID of the inspection record id as a followup inspection</inlineHelpText>
    <label>Follow-up Inspection ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>