force-app/main/default/objects/Inspection__c/fields/Follow_up_Inspection_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Inspection_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-up Inspection Required</label>
    <type>Checkbox</type>
</CustomField>