force-app/main/default/objects/Inspection__c/fields/Immediate_Notification__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Immediate notification is required for the incident</description>
    <inlineHelpText>Immediate notification is required for the incident</inlineHelpText>
    <label>Immediate Notification</label>
    <type>Checkbox</type>
</CustomField>