force-app/main/default/objects/Inspection__c/fields/Inspection_Progress__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Progress__c</fullName>
    <formula>TEXT(IF( ISNULL(Answered_Questions__c), 0, Answered_Questions__c))  &amp;  &quot;/&quot; &amp; TEXT(IF(ISNULL(Number_of_Questions__c), 0, Number_of_Questions__c))</formula>
    <label>Progress</label>
    <type>Text</type>
</CustomField>