force-app/main/default/objects/Inspection__c/fields/Inspection_Progress_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Progress_Percentage__c</fullName>
    <formula>((IF( ISNULL(Answered_Questions__c), 0, Answered_Questions__c))/  (IF(ISNULL(Number_of_Questions__c), 0, Number_of_Questions__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>