force-app/main/default/objects/Inspection__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <formula>IF(  Template__c  &lt;&gt;  null   , &apos;Form&apos; , IF(  Spreadsheet_Configuration__c  &lt;&gt;  null , &apos;Spreadsheet&apos; , &apos;&apos;) )</formula>
    <label>Inspection Type</label>
    <type>Text</type>
</CustomField>