force-app/main/default/objects/Inspection__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>