force-app/main/default/objects/Inspection__c/fields/Number_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questions__c</fullName>
    <formula>Template__r.Number_Of_Questions_From_JSON__c</formula>
    <label>Number of Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>