force-app/main/default/objects/Inspection__c/fields/Percentage_Score__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Score__c</fullName>
    <formula>IF(Available_Score__c != 0 &amp;&amp; Total_Score__c != 0, Total_Score__c / Available_Score__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>