force-app/main/default/objects/Inspection__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>TEXT(Total_Score__c) &amp; &quot;/&quot; &amp; TEXT(Available_Score__c)</formula>
    <label>Score</label>
    <type>Text</type>
</CustomField>