force-app/main/default/objects/Inspection__c/fields/Spreadsheet_Answers__c.field-meta.xml
<CustomField>
    <fullName>Spreadsheet_Answers__c</fullName>
    <description>Answer JSON for Spreadsheet records</description>
    <inlineHelpText>Answer JSON for Spreadsheet records</inlineHelpText>
    <label>Spreadsheet Answers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>