force-app/main/default/objects/Inspection__c/fields/Spreadsheet_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Spreadsheet_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Spreadsheet template that is used for this inspection</description>
    <inlineHelpText>Spreadsheet template that is used for this inspection</inlineHelpText>
    <label>Spreadsheet Configuration</label>
    <referenceTo>Spreadsheet_Configuration__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>