force-app/main/default/objects/Inspection__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Template</label>
    <referenceTo>Kinetic_Form__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>