force-app/main/default/objects/Inspection__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <formula>Template__r.Name</formula>
    <label>Template Name</label>
    <type>Text</type>
</CustomField>