force-app/main/default/objects/Inspection__c/fields/VRC_Installation_Order__c.field-meta.xml
<CustomField>
    <fullName>VRC_Installation_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VRC Installation Order</label>
    <referenceTo>VRC_Installation_Order__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>