force-app/main/default/objects/Inspection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Spreadsheet_Configuration__c</columns>
    <columns>Account__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>