force-app/main/default/objects/Inspection__c/listViews/All_Spreadsheet_Inspections.listView-meta.xml
<ListView>
    <fullName>All_Spreadsheet_Inspections</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Spreadsheet Inspections</label>
</ListView>