force-app/main/default/objects/Inspection__c/listViews/BAI_Inspections.listView-meta.xml
<ListView>
    <fullName>BAI_Inspections</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Template__c</columns>
    <columns>Inspection_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Percentage_Score__c</columns>
    <columns>Inspection_Progress_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>Completed</label>
</ListView>