force-app/main/default/objects/Inspection__c/listViews/Leitner_Inspections.listView-meta.xml
<ListView>
    <fullName>Leitner_Inspections</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Template__c</columns>
    <columns>Installation__c</columns>
    <columns>Percentage_Score__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>contains</operation>
        <value>Leitner</value>
    </filters>
    <label>Leitner Inspections</label>
</ListView>