force-app/main/default/objects/Inspection__c/listViews/MHC_Inspections.listView-meta.xml
<ListView>
    <fullName>MHC_Inspections</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Template__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Inspection_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>contains</operation>
        <value>MHC</value>
    </filters>
    <label>MHC Inspections</label>
</ListView>