force-app/main/default/objects/Inspection__c/listViews/Not_Started.listView-meta.xml
<ListView>
    <fullName>Not_Started</fullName>
    <columns>NAME</columns>
    <columns>Template__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>Not Started</label>
</ListView>