force-app/main/default/objects/Inspection__c/listViews/RMC_Crew_Sheets_View.listView-meta.xml
<ListView>
    <fullName>RMC_Crew_Sheets_View</fullName>
    <columns>NAME</columns>
    <columns>Spreadsheet_Configuration__c</columns>
    <columns>Account__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Spreadsheet_Configuration__c</field>
        <operation>equals</operation>
        <value>Crew Sheet</value>
    </filters>
    <label>RMC: Crew Sheets View</label>
</ListView>